alignment function by ai